--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GreenRoutine</string>
+    <string name="WOTD">Placeholder of the day</string>
 </resources>
