--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">GreenRoutine</string>
-    <string name="WOTD">Placeholder of the day</string>
+    <string name="michaelcommits">... Commits</string>
+
 </resources>
