--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">GreenRoutine</string>
     <string name="michaelcommits">... Commits</string>
+    <string name="WOTD">Placeholder of the day</string>
 
 </resources>
