--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">GreenRoutine</string>
-    <string name="michaelcommits">... Commits</string>
+    <string name="michaelcommits">... commits</string>
     <string name="IOTD">Placeholder of the day</string>
     <string name="DOTD">Placeholder Description</string>
 </resources>
